--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Nice-page</title>
@@ -72,6 +75,21 @@
                 Urna id volutpat lacus laoreet.</p>
                 <button>LEARN MORE</button>
             </div>
+
+        </div>
+
+        <div class="envision">
+            <div class="one">01</div>
+            <div class="practice">
+                <p>We can envision a new fresh look for your apartment, house, office or practice.</p>
+            </div>
+        </div>
+
+        <div class="images_hover">
+            <div class="hover_box"> </div>
+            <div class="hover_box1"></div>
+            <div class="hover_box2"></div>
+
 
         </div>
         
