--- a/index.html
+++ b/index.html
@@ -141,10 +141,64 @@
         </div>
 
         <div class="contact_form">
+         <div class="con_form_flex">
+          <h1>Contact Us</h1>
+          <input type="text" placeholder="enter your name">
+          <input type="email" placeholder="enter a valid email address">
+          <textarea name="" id="" cols="40" rows="3" placeholder="enter your massage"></textarea><br>
+          <button>Submit</button>
+         </div>
 
         </div>
-    
     </div>
+
+    <div class="z">
+    <p class="a">Image from  <a href="#">Freepik</a></p>
+  </div>
+
+<!-- footer sections -->
+
+<footer class="footer">
+    <div class="footer-left col-md-4 col-sm-6">
+      <p class="about">
+        <span> About the company</span> Ut congue augue non tellus bibendum, in varius tellus condimentum. In scelerisque nibh tortor, sed rhoncus odio condimentum in. Sed sed est ut sapien ultrices eleifend. Integer tellus est, vehicula eu lectus tincidunt,
+        ultricies feugiat leo. Suspendisse tellus elit, pharetra in hendrerit ut, aliquam quis augue. Nam ut nibh mollis, tristique ante sed, viverra massa.
+      </p>
+      <div class="icons">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-google-plus"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+      </div>
+    </div>
+    <div class="footer-center col-md-4 col-sm-6">
+      <div>
+        <i class="fa fa-map-marker"></i>
+        <p><span> Street name and number</span> City, Country</p>
+      </div>
+      <div>
+        <i class="fa fa-phone"></i>
+        <p> (+00) 0000 000 000</p>
+      </div>
+      <div>
+        <i class="fa fa-envelope"></i>
+        <p><a href="#"> office@company.com</a></p>
+      </div>
+    </div>
+    <div class="footer-right col-md-4 col-sm-6">
+      <h2> Company<span> logo</span></h2>
+      <p class="menu">
+        <a href="#"> Home</a> |
+        <a href="#"> About</a> |
+        <a href="#"> Services</a> |
+        <a href="#"> Portfolio</a> |
+        <a href="#"> News</a> |
+        <a href="#"> Contact</a>
+      </p>
+      <p class="name"> Company Name &copy; 2016</p>
+    </div>
+  </footer>
 </div>
 </body>
 </html>
